--- a/main.css
+++ b/main.css
@@ -4,7 +4,7 @@ body, html {
 }
 
 .hero-image {
-  background-image: url("https://enchanted-skies.net/styles/uix/uix/logo.png");
+  background-image: url("ESLOGO.png");
   height: 100%;
   background-position: center;
   background-repeat: no-repeat;
